--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
 
 <script src="vega_lite_vis.js"></script>
+<script src="vega_lite_vis_2.js"></script>
 
 <title>F1 Guide</title>
 </head>
@@ -19,4 +20,10 @@
 <div id="map_chart">
 </div>
 </body>
+
+<body>
+    <h1>Wins of Each Driver</h1>
+    <div id="bar_chart">
+    </div>
+    </body>
 </html>
