--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <script src="vega_lite_vis.js"></script>
 <script src="vega_lite_vis_2.js"></script>
+<script src="vega_lite_vis_3.js"></script>
 
 <title>F1 Guide</title>
 </head>
@@ -22,8 +23,14 @@
 </body>
 
 <body>
-    <h1>Wins of Each Driver</h1>
-    <div id="bar_chart">
-    </div>
-    </body>
+<h1>Wins of Each Driver</h1>
+<div id="bar_chart">
+</div>
+</body>
+
+<body>
+<h1>Points of Each Driver</h1>
+<div id="pie_chart">
+</div>
+</body>
 </html>
